src/test/ui/consts/miri_unleashed/abi-mismatch.stderr
warning: skipping const checks
  --> $DIR/abi-mismatch.rs:9:5
   |
LL |     my_fn();
   |     ^^^^^^^

warning: skipping const checks
  --> $DIR/abi-mismatch.rs:13:39
   |
LL | const VAL: () = call_rust_fn(unsafe { std::mem::transmute(c_fn as extern "C" fn()) });
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: any use of this value will cause an error
  --> $DIR/abi-mismatch.rs:9:5
   |
LL |     my_fn();
   |     ^^^^^^^
   |     |
   |     calling a function with ABI C using caller ABI Rust
   |     inside call to `call_rust_fn` at $DIR/abi-mismatch.rs:13:17
...
LL | const VAL: () = call_rust_fn(unsafe { std::mem::transmute(c_fn as extern "C" fn()) });
   | --------------------------------------------------------------------------------------
   |
   = note: `#[deny(const_err)]` on by default

error: aborting due to previous error

